--- a/front/src/app/ui/centered-card/centered-card.component.sass
+++ b/front/src/app/ui/centered-card/centered-card.component.sass
@@ -1,3 +1,8 @@
 .centered-card
-  width: 300px
+  width: 100%
+  max-width: 350px
   margin-top: 50px
+
+.card-title
+  text-align: center
+  padding: 10px 0
