--- a/front/src/app/pages/login/login.component.html
+++ b/front/src/app/pages/login/login.component.html
@@ -32,30 +32,27 @@
         Password is required!
       </mat-error>
     </mat-form-field>
-
     <div fxLayout="row" fxLayoutAlign="center" style="margin-bottom: 16px">
       <a routerLink="/register">Don't have an account? Sign Up</a>
     </div>
-
     <button
       type="submit"
+      (click)="onSubmit()"
       mat-raised-button
       color="primary"
       [disabled]="f.invalid"
     >
       SIGN IN
     </button>
-
     <button
       type="button"
       mat-raised-button
       color="default"
       (click)="fbLogin()"
-      style="margin-top: 16px"
+      style="margin-top: 16px;"
     >
-      <img src="assets/icons/fb.svg" alt="facebook logo"/>
-      &nbsp;&nbsp;
-      SIGN IN WITH FACEBOOK
+      <img src="assets/icons/fb.svg" alt="facebook"/>
+      WITH FACEBOOK
     </button>
   </form>
 </app-centered-card>
