--- a/front/src/app/ui/centered-card/centered-card.component.html
+++ b/front/src/app/ui/centered-card/centered-card.component.html
@@ -1,6 +1,6 @@
 <div fxLayout="row" fxLayoutAlign="center">
   <mat-card class="centered-card">
-    <mat-card-title>{{ title }}</mat-card-title>
+    <h2 class="card-title">{{ title }}</h2>
     <mat-card-content>
       <ng-content></ng-content>
     </mat-card-content>
