--- a/front/src/app/ui/layout/layout.component.sass
+++ b/front/src/app/ui/layout/layout.component.sass
@@ -20,3 +20,10 @@
 
 .content
   padding: 16px
+
+.avatar_img
+  width: 40px
+  height: 40px
+  border-radius: 50%
+  padding-top: 10px
+  cursor: pointer
