--- a/front/src/styles.sass
+++ b/front/src/styles.sass
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+.error
+  background-color: #f44336
+  padding: 10px
+  color: white
+  margin-bottom: 10px
+  text-align: center
+  border-radius: 5px
