--- a/front/src/app/pages/places/places.component.html
+++ b/front/src/app/pages/places/places.component.html
@@ -1,1 +1,36 @@
-<p>places works!</p>
+<div class="loading-block"
+     *ngIf="(loading | async) else placesArea">
+  <mat-spinner color="primary"
+  ></mat-spinner>
+</div>
+<ng-template #placesArea>
+  <div
+    class="places-list"
+    fxLayout.xs="column"
+    fxLayout="row wrap"
+    fxLayoutGap="15px"
+    ngClass.gt-xs="ml-15">
+    <mat-card
+      *ngFor="let place of (places | async)"
+      fxFlex.sm="0 1 calc(50%-15px)"
+      fxFlex.md="0 1 calc(33%-15px)"
+      fxFlex.gt-md="0 1 calc(25%-15px)">
+      <img mat-card-image
+           [src]="[env.placesUploadPath + place.mainPhoto]"
+           [alt]="place.title">
+      <mat-card-content>
+        <mat-card-title>{{ place.title }}</mat-card-title>
+        <mat-card-actions>
+          <button
+            mat-button
+            color="warn"
+            *appHasRoles="['admin']"
+          >DELETE
+          </button>
+        </mat-card-actions>
+      </mat-card-content>
+    </mat-card>
+  </div>
+</ng-template>
+
+
