--- a/front/src/app/pages/add-place/add-place.component.html
+++ b/front/src/app/pages/add-place/add-place.component.html
@@ -1,1 +1,60 @@
-<p>add-place works!</p>
+<app-centered-card title="Add Place">
+  <form fxLayout="column"
+        fxLayoutAlign="center"
+        #f="ngForm"
+        (ngSubmit)="onSubmit()">
+    <mat-form-field appearance="outline">
+      <mat-label>Title</mat-label>
+      <input type="text"
+             name="title"
+             matInput
+             required
+             #title="ngModel"
+             ngModel>
+      <mat-error *ngIf="title.touched && title.hasError('required')">
+        Title is required!
+      </mat-error>
+    </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>Description</mat-label>
+      <input type="text"
+             name="description"
+             autocomplete="description"
+             required
+             matInput
+             ngModel
+             #description="ngModel">
+      <mat-error *ngIf="description.touched && description.hasError('required')">
+        Description is required!
+      </mat-error>
+    </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>Main Photo</mat-label>
+      <app-file-input name="mainPhoto"
+                      ngModel></app-file-input>
+    </mat-form-field>
+      <section class="example-section">
+        <p>By sumbitting this form , you agree that the following
+          information will be submitted to the public domain ,
+          and administrators of this site will have full control over the said information.</p>
+        <mat-checkbox
+          [formControl]="isAgreeControl"
+          [checked]="false"
+          name="isAgreeControl"
+          required
+          color="primary"
+          class="example-margin">I agree
+        </mat-checkbox>
+        <mat-error
+          class="agree-error"
+          *ngIf="isAgreeControl.hasError('required')">
+          You have to agree with a terms of our policy
+        </mat-error>
+      </section>
+
+    <button mat-raised-button
+            color="primary">CREATE
+    </button>
+  </form>
+</app-centered-card>
+
