Implemented deleting places by admin

--- a/front/src/app/pages/places/places.component.html
+++ b/front/src/app/pages/places/places.component.html
@@ -25,6 +25,7 @@
             mat-button
             color="warn"
             *appHasRoles="['admin']"
+            (click)="delete(place._id)"
           >DELETE
           </button>
         </mat-card-actions>
