--- a/front/src/app/pages/places/places.component.html
+++ b/front/src/app/pages/places/places.component.html
@@ -28,6 +28,12 @@
             (click)="delete(place._id)"
           >DELETE
           </button>
+          <button
+            mat-button
+            color="primary"
+            [routerLink]="['place/' + place._id]"
+          >VIEW
+          </button>
         </mat-card-actions>
       </mat-card-content>
     </mat-card>
