--- a/front/src/app/pages/place/place.component.sass
+++ b/front/src/app/pages/place/place.component.sass
@@ -1,3 +1,6 @@
+mat-card
+  margin-top: 10px
+
 .place-img
   max-width: 240px
   height: auto
@@ -7,3 +10,10 @@
 
 .place-gallery-title
   padding-top: 15px
+
+.upload-image-block
+  padding: 20px 0 10px 0
+
+.images-list
+  padding-bottom: 20px
+
