--- a/front/src/app/pages/place/place.component.sass
+++ b/front/src/app/pages/place/place.component.sass
@@ -17,3 +17,12 @@ mat-card
 .images-list
   padding-bottom: 20px
 
+.review-btn
+  margin-left: 20px
+
+.reviews-block
+  padding-top: 20px
+
+mat-form-field
+  margin-left: 5px
+
