--- a/front/src/app/pages/places/places.component.html
+++ b/front/src/app/pages/places/places.component.html
@@ -20,6 +20,8 @@
            [alt]="place.title">
       <mat-card-content>
         <mat-card-title>{{ place.title }}</mat-card-title>
+        <p>({{ place.reviews.length }} reviews, {{ place.images.length }} photos) </p>
+        <p></p>
         <mat-card-actions>
           <button
             mat-button
