Added fixtures data

--- a/front/src/app/ui/layout/layout.component.html
+++ b/front/src/app/ui/layout/layout.component.html
@@ -8,11 +8,9 @@
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item
-         href="#">All Places</a>
+         routerLink="/">All Places</a>
       <a mat-list-item
-         href="#">Add Place</a>
-      <a mat-list-item
-         href="#">Category 3</a>
+         routerLink="add-place">Add Place</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
